Add employee at workstation to admin

--- a/templates/nav/nav.html
+++ b/templates/nav/nav.html
@@ -50,11 +50,11 @@
                     </ul>
                 </div>
 
-                <div class="navbar-right">
-                    <ul class="nav navbar-nav">
+                <ul class="nav navbar-nav navbar-right">
+
                         <li class="active">{{ request.user.username }}</li>
-                    </ul>
-                </div>
+
+                </ul>
 
             </div>
         </div>
