--- a/templates/nav/nav.html
+++ b/templates/nav/nav.html
@@ -9,7 +9,7 @@
 <script src="{% static "bootcard/js/bootcards.min.js" %}"></script>
 
 
-
+{# Jawn it up #}
 
 <div class="col-sm-2 hidden-xs">
     <div class="docs-menu affix">
