--- a/templates/equipment/equipment_index.html
+++ b/templates/equipment/equipment_index.html
@@ -26,7 +26,7 @@
             <div class="panel panel-default">
                 <div class="list-group">
                     {% for each_type in equipmentTypes %}
-                        <a class="list-group-item" href="/equipment/{{ each_type.equipment_type }}/{{ each_type.part_identifier }}">
+                        <a class="list-group-item" href="/equipment/{{ equipment_class_id }}/{{ each_type.equipment_type }}/{{ each_type.part_identifier }}">
                             <h4 class="list-group-item-heading">{{ each_type.part_identifier }}</h4>
                             <p class="list-group-item-text">{{ each_type.manufacturer_name }} {{ each_type.equipment_type }}</p>
                         </a>
