Add employee at workstation to admin

--- a/templates/equipment/index.html
+++ b/templates/equipment/index.html
@@ -18,7 +18,7 @@
         </div>
     </div>
 
-{% if equipmentTypes %}
+{% if equipment_classes %}
         <div class="bootcards-list">
             <div class="panel panel-default">
                 <div class="list-group">
