Add employee at workstation to admin

--- a/templates/equipment/equipment_info.html
+++ b/templates/equipment/equipment_info.html
@@ -25,7 +25,7 @@
                         <a class="list-group-item" href="/equipment/view_equipment/pm_form/{{ equip_info.id }}/{{ each_PM.id }}/">
                             <h4 class="list-group-item-heading">Record </h4>
 
-                            <p class="list-group-item-text">{{ each_PM }} Preventative
+                            <p class="list-group-item-text">{{ each_PM.pm_frequency__pm_frequency }} Preventative
                                 Maintenance</p>
                         </a>
                     {% endfor %}
