Add employee at workstation to admin

--- a/templates/equipment/equipment_info.html
+++ b/templates/equipment/equipment_info.html
@@ -22,7 +22,7 @@
                 <div class="list-group">
                     {% if PM_info %}
                         {% for each_PM in PM_info %}
-                        <a class="list-group-item" href="/equipment/view_equipment/pm_form/{{ equip_info.id }}/{{ each_PM.id }}/">
+                        <a class="list-group-item" href="/equipment/view_equipment/pm_form/{{ equip_info.id }}/{{ each_PM.pm_frequency__id }}/">
                             <h4 class="list-group-item-heading">Record </h4>
 
                             <p class="list-group-item-text">{{ each_PM.pm_frequency__pm_frequency }} Preventative
