--- a/templates/equipment/index.html
+++ b/templates/equipment/index.html
@@ -23,7 +23,8 @@
             <div class="panel panel-default">
                 <div class="list-group">
                     {% for each_class in equipment_classes %}
-                        <a class="list-group-item" href="/equipment/{{ each_class.id }}">
+                        <a class="list-group-item" href="/equipment/{{ each_class.id }}"
+                            data-toggle="tooltip" data-placement="right" title="Hooray!">
                             <h4 class="list-group-item-heading">{{ each_class.group_name }}</h4>
                             <p class="list-group-item-text">Click here to record an activity </p>
                         </a>
@@ -38,3 +39,13 @@
 
 </body>
 </html>
+
+
+
+
+
+<script>
+$(document).ready(function(){
+    $('[data-toggle="tooltip"]').tooltip();
+});
+</script>
