--- a/templates/equipment/equipment_index.html
+++ b/templates/equipment/equipment_index.html
@@ -24,6 +24,9 @@
 {% if equipmentTypes %}
         <div class="bootcards-list">
             <div class="panel panel-default">
+                <div class="panel-heading clearfix">
+                    <h3 class="panel-title pull-left"></h3>
+                </div>
                 <div class="list-group">
                     {% for each_type in equipmentTypes %}
                         <a class="list-group-item" href="/equipment/view_equipment/{{ each_type.id }}/">
