--- a/templates/equipment/equipment_info.html
+++ b/templates/equipment/equipment_info.html
@@ -19,6 +19,9 @@
 {% if PM_info %}
         <div class="bootcards-list">
             <div class="panel panel-default">
+                <div class="panel-heading clearfix">
+                    <h3 class="panel-title pull-left"></h3>
+                </div>
                 <div class="list-group">
                     {% if PM_info %}
                         {% for each_PM in PM_info %}
