--- a/templates/equipment/index.html
+++ b/templates/equipment/index.html
@@ -21,6 +21,9 @@
 {% if equipment_classes %}
         <div class="bootcards-list">
             <div class="panel panel-default">
+                <div class="panel-heading clearfix">
+                    <h3 class="panel-title pull-left"></h3>
+                </div>
                 <div class="list-group">
                     {% for each_class in equipment_classes %}
                         <a class="list-group-item" href="/equipment/{{ each_class.id }}"
@@ -39,8 +42,6 @@
 
 </body>
 </html>
-
-
 
 
 
