--- a/templates/nav/nav.html
+++ b/templates/nav/nav.html
@@ -21,33 +21,48 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Project name</a>
+          <a class="navbar-brand" href="/">QMS</a>
         </div>
+
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="/">Home</a></li>
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+              <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Inspection<span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><a href="#">Action</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
+                  <li><a href="/startupshot/">Startup Shot</a></li>
+                <li><a href="/inspection/">Inspection Home</a></li>
                 <li role="separator" class="divider"></li>
-                <li class="dropdown-header">Nav header</li>
-                <li><a href="#">Separated link</a></li>
-                <li><a href="#">One more separated link</a></li>
+                <li class="dropdown-header">Reports</li>
+                  <li><a href="/startupshot/view">Startup Shot Report</a></li>
+                <li><a href="/inspection/itemReport/">Item Report</a></li>
+                <li><a href="/inspection/jobReport/">Job Report</a></li>
+              </ul>
+            </li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Equipment<span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                  <li><a href="/equipment/">Equipment</a></li>
+                <li><a href="/production_and_mold_history/mold_maintence_request/">Tooling Requests</a></li>
+              </ul>
+            </li>
+
+              <li><a href="/production_and_mold_history/">PHL</a></li>
+
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dashboards<span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                  <li><a href="/dashboard/errorLog/">Error Log</a></li>
+                <li><a href="/dashboard/errorProdLog/">Production Comments</a></li>
+                <li><a href="/dashboard/inspectionLog/">Inspection Log</a></li>
               </ul>
             </li>
           </ul>
+
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="../navbar/">Default</a></li>
-            <li><a href="../navbar-static-top/">Static top</a></li>
-            <li class="active"><a href="./">Fixed top <span class="sr-only">(current)</span></a></li>
+            <li><a href="/logout">Log out, {{ request.user.username }} </a></li>
           </ul>
         </div><!--/.nav-collapse -->
-      </div>
     </nav>
 
 
@@ -57,15 +72,6 @@
 {#            {% if user.is_authenticated %}#}
 {#                Welcome, {{ request.user.username }}#}
 {#            <li><a href="/">Home</a></li>#}
-{#            <li><a href="/startupshot/">Startup Shot</a></li>#}
-{#            <li><a href="/startupshot/view">Startup Shot Report</a></li>#}
-{#            <li><a href="/inspection/">Inspection</a></li>#}
-{#            <li><a href="/inspection/itemReport/">Part Report</a></li>#}
-{#            <li><a href="/inspection/jobReport/">Job Report</a></li>#}
-{#            <li><a href="/production_and_mold_history/">PHL</a></li>#}
-{#            <li><a href="/equipment/">Equipment</a></li>#}
-{#            <li><a href="/dashboard/errorLog/">Error Log</a></li>#}
-{#            <li><a href="/production_and_mold_history/mold_maintence_request/">Tooling Requests</a></li>#}
 {#            <li><a href="/dashboard/errorProdLog/">Production Comments</a></li>#}
 {#            <li><a href="/dashboard/inspectionLog/">Inspection Log</a></li>#}
 {#                <li><a href="/logout">Log out</a></li>#}
