--- a/templates/nav/nav.html
+++ b/templates/nav/nav.html
@@ -27,8 +27,9 @@
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li><a href="/">Home</a></li>
-            <li class="dropdown">
-              <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Inspection<span class="caret"></span></a>
+
+              <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Inspection<span class="caret"></span></a>
               <ul class="dropdown-menu">
                   <li><a href="/startupshot/">Startup Shot</a></li>
                 <li><a href="/inspection/">Inspection Home</a></li>
@@ -39,6 +40,7 @@
                 <li><a href="/inspection/jobReport/">Job Report</a></li>
               </ul>
             </li>
+
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Equipment<span class="caret"></span></a>
               <ul class="dropdown-menu">
