--- a/templates/nav/nav.html
+++ b/templates/nav/nav.html
@@ -29,7 +29,7 @@
             <li><a href="/">Home</a></li>
 
               <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Inspection<span class="caret"></span></a>
+              <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" href="#" >Inspection<span class="caret"></span></a>
               <ul class="dropdown-menu">
                   <li><a href="/startupshot/">Startup Shot</a></li>
                 <li><a href="/inspection/">Inspection Home</a></li>
@@ -42,7 +42,7 @@
             </li>
 
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Equipment<span class="caret"></span></a>
+              <a  class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" href="#">Equipment<span class="caret"></span></a>
               <ul class="dropdown-menu">
                   <li><a href="/equipment/">Equipment</a></li>
                 <li><a href="/production_and_mold_history/mold_maintence_request/">Tooling Requests</a></li>
@@ -52,7 +52,7 @@
               <li><a href="/production_and_mold_history/">PHL</a></li>
 
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dashboards<span class="caret"></span></a>
+              <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" href="#" >Dashboards<span class="caret"></span></a>
               <ul class="dropdown-menu">
                   <li><a href="/dashboard/errorLog/">Error Log</a></li>
                 <li><a href="/dashboard/errorProdLog/">Production Comments</a></li>
