--- a/templates/nav/nav.html
+++ b/templates/nav/nav.html
@@ -21,12 +21,12 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">QMS</a>
+          <a class="navbar-brand" href="/QMS">QMS</a>
         </div>
 
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li><a href="/">Home</a></li>
+            <li><a href="/QMS">Home</a></li>
 
               <li class="dropdown">
               <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" href="#" >Inspection<span class="caret"></span></a>
@@ -42,7 +42,7 @@
             </li>
 
             <li class="dropdown">
-              <a  class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" href="#">Equipment<span class="caret"></span></a>
+              <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" href="#" >Equipment<span class="caret"></span></a>
               <ul class="dropdown-menu">
                   <li><a href="/equipment/">Equipment</a></li>
                 <li><a href="/production_and_mold_history/mold_maintence_request/">Tooling Requests</a></li>
@@ -52,7 +52,7 @@
               <li><a href="/production_and_mold_history/">PHL</a></li>
 
             <li class="dropdown">
-              <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" href="#" >Dashboards<span class="caret"></span></a>
+              <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" href="#">Dashboards<span class="caret"></span></a>
               <ul class="dropdown-menu">
                   <li><a href="/dashboard/errorLog/">Error Log</a></li>
                 <li><a href="/dashboard/errorProdLog/">Production Comments</a></li>
