--- a/templates/nav/nav.html
+++ b/templates/nav/nav.html
@@ -65,6 +65,7 @@
             <li><a href="/logout">Log out, {{ request.user.username }} </a></li>
           </ul>
         </div><!--/.nav-collapse -->
+          </div>
     </nav>
 
 
