--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -12,7 +12,7 @@
 {% include "nav/nav.html" %}
 
 <body>
-<div class="col-sm-10 bootcards-cards">
+<div class="col-sm-offset-1 col-sm-10 bootcards-cards">
     <div class="panel panel-default">
         <div style="text-align:center">
             <img src="{% static "images/CMGlogo-white-BG.jpg" %}" style="height:200px">
