--- a/templates/404.html
+++ b/templates/404.html
@@ -11,7 +11,7 @@
 {% load staticfiles %}
 {% include "nav/nav.html" %}
 
-<div class="col-sm-10 bootcards-cards">
+<div class="col-sm-offset-1 col-sm-10 bootcards-cards">
     <div class="panel panel-default">
         <div style="text-align:center">
             <h1>Error!</h1>
