--- a/templates/dashboard/completedInspections.html
+++ b/templates/dashboard/completedInspections.html
@@ -12,7 +12,7 @@
 
 {% include "nav/nav.html" %}
 
-<div class="col-sm-10 bootcards-cards">
+<div class="col-sm-offset-1 col-sm-10 bootcards-cards">
                 {% for key,value in resultDict.items %}
                     {% include 'dashboard/inspectionTable.html' %}
                 {% endfor %}
