--- a/templates/dashboard/errorProdLog.html
+++ b/templates/dashboard/errorProdLog.html
@@ -14,7 +14,7 @@
 {% include "nav/nav.html" %}
 
 {% if prodErrors %}
-    <div class="col-sm-10 bootcards-cards">
+    <div class="col-sm-offset-1 col-sm-10 bootcards-cards">
     <div class="panel panel-default">
     <div class="panel-heading clearfix">
                 <h3 class="panel-title pull-left"> Production History Log </h3>
