--- a/templates/equipment/equipment_index.html
+++ b/templates/equipment/equipment_index.html
@@ -11,7 +11,7 @@
 
 {% include "nav/nav.html" %}
 
-<div class="col-sm-10 bootcards-cards">
+<div class="col-sm-offset-1 col-sm-10 bootcards-cards">
     <div class="panel panel-default">
         <div class="panel-body">
             <p>Welcome to the CMG QMS Equipment Maintenance Page! Click on one of the following equipment types to view more
