--- a/templates/equipment/equipment_info.html
+++ b/templates/equipment/equipment_info.html
@@ -9,7 +9,7 @@
 <body>
 
 {% include "nav/nav.html" %}
-<div class="col-sm-10 bootcards-cards">
+<div class="col-sm-offset-1 col-sm-10 bootcards-cards">
     {% include "equipment/subTemplates/equipInfo.html" %}
 
 
