--- a/templates/equipment/forms/pm.html
+++ b/templates/equipment/forms/pm.html
@@ -16,7 +16,7 @@
 
 
 
-<div class="col-sm-10 bootcards-cards">
+<div class="col-sm-offset-1 col-sm-10 bootcards-cards">
     {% include "equipment/subTemplates/equipInfo.html" %}
 
     <div class="panel panel-default ">
