--- a/templates/equipment/reports/equipment_repair_report.html
+++ b/templates/equipment/reports/equipment_repair_report.html
@@ -15,7 +15,7 @@
 {% include "nav/nav.html" %}
 
 
-<div class="col-sm-10 bootcards-cards">
+<div class="col-sm-offset-1 col-sm-10 bootcards-cards">
     {% include "equipment/subTemplates/equipInfo.html" %}
     {% if repair_info %}
         <div class="panel panel-default ">
