--- a/templates/inspection/forms/genInspection.html
+++ b/templates/inspection/forms/genInspection.html
@@ -16,7 +16,7 @@
 <link href="{% static "jquery-ui/jquery-ui.min.css" %}" rel="stylesheet">
 
 
-<div class="col-sm-10 bootcards-cards">
+<div class="col-sm-offset-1 col-sm-10 bootcards-cards">
 
 
             {% include "inspection/subTemplates/subJobInfo.html" %}
