--- a/templates/inspection/reports/jobReport.html
+++ b/templates/inspection/reports/jobReport.html
@@ -23,7 +23,7 @@
 {% include "nav/nav.html" %}
 
 
-<div class="col-sm-10 bootcards-cards">
+<div class="col-sm-offset-1 col-sm-10 bootcards-cards">
     {% include "reportHeaderFooter/reportHeader.html" %}
     {% include "inspection/subTemplates/subJobInfo.html" %}
     {% include "inspection/subTemplates/sub_error_bar_chart.html" %}
