--- a/templates/inspection/reports/partReport.html
+++ b/templates/inspection/reports/partReport.html
@@ -10,7 +10,7 @@
 
 {% include "nav/nav.html" %}
 
-<div class="col-sm-10 bootcards-cards">
+<div class="col-sm-offset-1 col-sm-10 bootcards-cards">
 
     {% with partDict.headerDict as headerDict %}
     {% include "reportHeaderFooter/reportHeader.html" %}
