--- a/templates/inspection/searchForms/itemReportSearch.html
+++ b/templates/inspection/searchForms/itemReportSearch.html
@@ -11,7 +11,7 @@
 {% include "nav/nav.html" %}
 
 
-<div class="col-sm-10 bootcards-cards">
+<div class="col-sm-offset-1 col-sm-10 bootcards-cards">
     <p>Welcome to the CMG Inspection Page! Type in an item number to generate a report:</p>
     <div class="panel panel-default ">
             {% include "project_form_templates/gen_form.html" %}
