--- a/templates/phl/forms/moldForm.html
+++ b/templates/phl/forms/moldForm.html
@@ -10,7 +10,7 @@
 
 {% include "nav/nav.html" %}
 
-<div class="col-sm-10 bootcards-cards">
+<div class="col-sm-offset-1 col-sm-10 bootcards-cards">
     {% include "phl/subtemplates/moldInfo.html" %}
 
     <div class="panel panel-default ">
