--- a/templates/phl/forms/phlLookup.html
+++ b/templates/phl/forms/phlLookup.html
@@ -13,7 +13,7 @@
 
 
 
-<div class="col-sm-10 bootcards-cards">
+<div class="col-sm-offset-1 col-sm-10 bootcards-cards">
 
     <div class="panel panel-default ">
         <div class="panel-heading clearfix">
