--- a/templates/phl/index.html
+++ b/templates/phl/index.html
@@ -14,7 +14,7 @@
 {% include "nav/nav.html" %}
 
 
-<div class="col-sm-10 bootcards-cards">
+<div class="col-sm-offset-1 col-sm-10 bootcards-cards">
     <div class="panel panel-default ">
         <div class="panel-body">
             <p>Welcome to the Production History Log Page!</p>
