--- a/templates/phl/phl_index.html
+++ b/templates/phl/phl_index.html
@@ -13,7 +13,7 @@
 {% bootstrap_javascript jquery=1 %}
 {% include "nav/nav.html" %}
 
-<div class="col-sm-10 bootcards-cards">
+<div class="col-sm-offset-1 col-sm-10 bootcards-cards">
     <div class="panel panel-default ">
         <div class="panel-body">
             <p>Welcome to the Production History Log Page!</p>
