--- a/templates/phl/reports/phl.html
+++ b/templates/phl/reports/phl.html
@@ -14,7 +14,7 @@
 {% include "nav/nav.html" %}
 
 
-<div class="col-sm-10 bootcards-cards">
+<div class="col-sm-offset-1 col-sm-10 bootcards-cards">
 
 
     {% if my_dict %}
