--- a/templates/phl/reports/phl_by_mold.html
+++ b/templates/phl/reports/phl_by_mold.html
@@ -15,7 +15,7 @@
 {% include "nav/nav.html" %}
 
 
-<div class="col-sm-10 bootcards-cards">
+<div class="col-sm-offset-1 col-sm-10 bootcards-cards">
 
 
     {% if my_dict %}
