--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -11,7 +11,7 @@
 
 {% include "nav/nav.html" %}
 
-<div class="col-sm-10 bootcards-cards">
+<div class="col-sm-offset-1 col-sm-10 bootcards-cards">
     <div class="panel panel-default ">
         <div class="panel-heading clearfix">
             <h3 class="panel-title pull-left">Please login</h3>
