--- a/templates/startupshot/createStartupShot.html
+++ b/templates/startupshot/createStartupShot.html
@@ -11,7 +11,7 @@
 {% load staticfiles %}
 {% include "nav/nav.html" %}
 
-<div class="col-sm-10 bootcards-cards">
+<div class="col-sm-offset-1 col-sm-10 bootcards-cards">
     {% include "startupshot/subMattecSummary.html" %}
 
 
