--- a/templates/startupshot/view.html
+++ b/templates/startupshot/view.html
@@ -15,7 +15,7 @@
 {% include "nav/nav.html" %}
 
 
-<div class="col-sm-10 bootcards-cards">
+<div class="col-sm-offset-1 col-sm-10 bootcards-cards">
     <div class="panel panel-default ">
         <div class="panel-body">
 
