--- a/templates/startupshot/viewActive.html
+++ b/templates/startupshot/viewActive.html
@@ -12,7 +12,7 @@
 {% include "nav/nav.html" %}
 
 
-<div class="col-sm-10 bootcards-cards">
+<div class="col-sm-offset-1 col-sm-10 bootcards-cards">
     <div class="panel panel-default ">
         <div class="panel-body">
             <p>Welcome to the CMG Startup Shot Page! The following machines are active:</p>
