--- a/templates/dashboard/errorProdLog.html
+++ b/templates/dashboard/errorProdLog.html
@@ -17,7 +17,7 @@
     <div class="col-sm-offset-1 col-sm-10 bootcards-cards">
     <div class="panel panel-default">
     <div class="panel-heading clearfix">
-                <h3 class="panel-title pull-left"> Production History Log </h3>
+                <h3 class="panel-title pull-left">Production Events Log</h3>
             </div>
         <div class="panel-body">
             <table class="table table-hover">
@@ -25,9 +25,9 @@
                 <tr>
                     <th>Date</th>
                     <th>Name</th>
-                    <th>Machine</th>
+                    <th>Station</th>
                     <th>Part</th>
-                    <th>Error Description</th>
+                    <th>Notes</th>
                 </tr>
                 </thead>
             <tbody>
