--- a/templates/nav/nav.html
+++ b/templates/nav/nav.html
@@ -21,12 +21,12 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/QMS">QMS</a>
+          <a class="navbar-brand" href="/">QMS</a>
         </div>
-
+        {% if user.is_authenticated %}
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li><a href="/QMS">Home</a></li>
+            <li><a href="/">Home</a></li>
 
               <li class="dropdown">
               <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" href="#" >Inspection<span class="caret"></span></a>
@@ -65,6 +65,7 @@
             <li><a href="/logout">Log out, {{ request.user.username }} </a></li>
           </ul>
         </div><!--/.nav-collapse -->
+          {% endif %}
           </div>
     </nav>
 
