--- a/templates/dashboard/errorProdLog.html
+++ b/templates/dashboard/errorProdLog.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>CMG QMS - Production History Log [{{ request.user.username }}]</title>
+    <title>CMG QMS - Production Events Log [{{ request.user.username }}]</title>
 </head>
 
 
