--- a/templates/equipment/subTemplates/equipInfo.html
+++ b/templates/equipment/subTemplates/equipInfo.html
@@ -2,9 +2,11 @@
 
 {% if equip_info %}
 <div class="panel panel-default">
+                <div class="panel-heading clearfix">
+                    <h3 class="panel-title pull-left">Equipment Information</h3>
+                </div>
         <div class="panel-body">
     <table class="table table-hover">
-        <caption style="text-align:center">Equipment Information</caption>
         <thead>
         <tr>
             <th>Equipment Type</th>
