--- a/templates/dashboard/errorLog.html
+++ b/templates/dashboard/errorLog.html
@@ -56,7 +56,7 @@
                 </thead>
             <tbody>
             {% for eachProdError in prodErrors %}
-                <tr class='clickable-row' data-href='/inspection/jobReport/{{ eachProdError.jobID }}/' >
+                <tr class='clickable-row' data-href='/inspection/jobReport/{{ eachProdError.jobNumber }}/' >
                 <td>
                     {{ eachProdError.shiftID }}
                 </td>
