--- a/templates/dashboard/errorProdLog.html
+++ b/templates/dashboard/errorProdLog.html
@@ -32,7 +32,11 @@
                 </thead>
             <tbody>
             {% for eachProdError in prodErrors %}
-                <tr class='clickable-row' data-href='/inspection/jobReport/{{ eachProdError.jobID }}/' >
+                {% if eachProdError.jobNumber == '000000.000' %}
+                <tr>
+                {% else %}
+                <tr class='clickable-row' data-href='/inspection/jobReport/{{ eachProdError.jobNumber }}/' >
+                {% endif %}
                 <td>
                     {{ eachProdError.dateCreated }}
                 </td>
