--- a/templates/dashboard/errorLog.html
+++ b/templates/dashboard/errorLog.html
@@ -59,7 +59,7 @@
                 {% if eachProdError.jobNumber == '000000.000' %}
                 <tr>
                 {% else %}
-                <tr class='clickable-row' data-href='/inspection/jobReport/{{ eachProdError.jobNumber }}/' >
+                <tr class='clickable-row' data-href='/inspection/jobReport/{{ eachProdError.jobID }}/' >
                 {% endif %}
                 <td>
                     {{ eachProdError.shiftID }}
