Add employee at workstation to admin

--- a/templates/inspection/forms/genInspection.html
+++ b/templates/inspection/forms/genInspection.html
@@ -55,7 +55,7 @@
 
 {% include "inspection/subTemplates/js_helpers/sub_clone.html" %}
 
-{% include "inspection/subTemplates/js_helpers/check_head_cav.html" %}
+{#{% include "inspection/subTemplates/js_helpers/check_head_cav.html" %}#}
 
 {% if machine_operator %}
     <script>
