Modify template which displays active_job info. It is no longer a list of query sets

--- a/templates/inspection/subTemplates/subJobInfo.html
+++ b/templates/inspection/subTemplates/subJobInfo.html
@@ -19,10 +19,10 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td>{{ active_job.0.item.item_Number }}</td>
-                        <td>{{ active_job.0.item.item_Description }}</td>
-                        <td>{{ active_job.0.item.exp_part_weight }}</td>
-                        <td>{{ active_job.0.item.exp_cycle_time }}</td>
+                        <td>{{ active_job.item.item_Number }}</td>
+                        <td>{{ active_job.item.item_Description }}</td>
+                        <td>{{ active_job.item.exp_part_weight }}</td>
+                        <td>{{ active_job.item.exp_cycle_time }}</td>
                     </tr>
                 </tbody>
             </table>
